--- a/package.json
+++ b/package.json
@@ -9,30 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "motion": "^12.23.12",
     "next": "15.5.2",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
+    "radix-ui": "^1.4.3",
     "react": "19.1.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "19.1.12",
     "@types/react-dom": "19.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5"
   },
   "overrides": {
